# cxb

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json  coverage.json  coverage.profdata  coverage.txt  cxb-10001.profraw  cxb-10003.profraw  cxb-10006.profraw  cxb-10007.profraw  cxb-10010.profraw  cxb-10012.profraw  cxb-10089.profraw  cxb-10196.profraw  cxb-8614.profraw  cxb-8616.profraw  cxb-8618.profraw  cxb-8620.profraw  cxb-8694.profraw  cxb-8695.profraw  cxb-8696.profraw  cxb-8698.profraw  cxb-8700.profraw  cxb-8702.profraw  cxb-8704.profraw  cxb-9842.profraw  cxb-9844.profraw  cxb-9846.profraw  cxb-9848.profraw  cxb-9850.profraw  cxb-9901.profraw  cxb-9903.profraw  (+13 more)
.github/workflows/: ci.yml  format-check.yml
Testing/Temporary/: CTestCostData.txt
benchmarks/: PARSE_TIMES.md  bench_std_headers.cpp  bench_string.cpp  bench_string_header.cpp
ci/: ci.sh  flake.nix
cxb/: cxb-c.h  cxb-cxx.h  cxb-unicode.h  cxb.cpp  cxb.h  print.h  unicode.h
docs/: DEVELOPMENT.md  STYLE_GUIDE.md
docs/dev/: LOG.org
examples/: interpreter.cpp  lang.h  memfile.cpp  memfile.h  parser.cpp  parser.h
examples/interpreter/: add  cond  fib
hooks/: pre-commit
scripts/: analyze_build_times.py  extract_capi.cpp  format.sh
scripts/ci/: ci.sh  coverage.sh  flake.nix
scripts/dev/hooks/: pre-commit
scripts/hooks/: pre-commit
tests/: bench_string.cpp  c_api_test.cpp  c_api_test.h  test_algos.cpp  test_arena.cpp  test_array.cpp  test_c_api_c.c  test_c_api_cpp.cpp  test_format.cpp  test_hm.cpp  test_seq.cpp  test_static_array.cpp  test_str8.cpp  test_string.cpp
tests/benchmarks/: PARSE_TIMES.md  bench_algos.cpp  bench_hm.cpp  bench_string.cpp  bench_string_header.cpp
tests/benchs/: PARSE_TIMES.md  bench_hm.cpp  bench_std_headers.cpp  bench_string_header.cpp
tests/fuzz/: README.md  fuzz_format_float.cpp  fuzz_hashmap.cpp  fuzz_string.cpp  string_fuzz.cpp
tools/: extract_capi.cpp  fwdecl.cpp
